# sdk-nrf

./: CODEOWNERS
doc/nrf/libraries/others/: emds.rst
doc/nrf/releases/: release-notes-changelog.rst
drivers/mpsl/flash_sync/: flash_sync_mpsl.c
include/: nrf52_dbg_pins.h  pin_debug_transport.h
include/bluetooth/mesh/: lightness_srv.h
include/emds/: emds.h  emds_flash.h
include/shdn/: shdn_manager.h
lib/dk_buttons_and_leds/: Kconfig  nrf52_dbg_pins.c
samples/bluetooth/mesh/light_ctrl/: CMakeLists.txt  overlay-dfu.conf  overlay-mcuboot.conf  prj.conf
samples/bluetooth/mesh/light_ctrl/src/: main.c  model_handler.c
samples/bluetooth/mesh/light_switch/: prj.conf
samples/bluetooth/mesh/light_switch/child_image/: hci_rpmsg.conf
samples/emds/: CMakeLists.txt  prj.conf  sample.yaml
samples/emds/src/: main.c
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/controller/: hci_driver.c
subsys/bluetooth/mesh/: light_ctrl_srv.c  lightness_srv.c  model_utils.c
subsys/emds/: Kconfig  emds.c  emds_flash.c  emds_flash.h
subsys/partition_manager/: CMakeLists.txt  Kconfig  pm.yml.shdn
subsys/shdn/: CMakeLists.txt  Kconfig  shdn_manager.c  shdn_storage.c  shdn_storage.h  shdn_types.ld
tests/subsys/emds/emds_api/: testcase.yaml
tests/subsys/emds/emds_api/src/: main.c
tests/subsys/emds/emds_flash/: testcase.yaml
